Adding tool to dump JMX.
The JSON generation is borrowed from Hadoop's JmxJsonServlet,
which is Apache 2.0 licensed.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -20,6 +20,11 @@
        <systemPath>${java.home}/lib/tools.jar</systemPath>
      </dependency>
      -->
+     <dependency>
+        <groupId>org.codehaus.jackson</groupId>
+        <artifactId>jackson-core-asl</artifactId>
+        <version>1.9.6</version>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
