--- a/attach-api/pom.xml
+++ b/attach-api/pom.xml
@@ -16,6 +16,17 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins </groupId>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <version>2.9</version>
+        <configuration>
+          <projectNameTemplate>jvmtools-${project.artifactId}</projectNameTemplate>
+          <buildOutputDirectory>eclipse-classes</buildOutputDirectory>
+          <downloadSources>true</downloadSources>
+          <downloadJavadocs>true</downloadJavadocs>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
