--- a/core/pom.xml
+++ b/core/pom.xml
@@ -36,6 +36,15 @@
           <target>1.6</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins </groupId>
+        <artifactId>maven-eclipse-plugin</artifactId>
+        <version>2.9</version>
+        <configuration>
+          <buildOutputDirectory>eclipse-classes</buildOutputDirectory>
+          <projectNameTemplate>jvmtools-${project.artifactId}</projectNameTemplate>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
