Ensure that tools.jar added to classpath just once

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
      <module>core</module>
      <module>gcrep</module>
      <module>jtop</module>
+     <module>jtool</module>
   </modules>
   <build>
     <pluginManagement>
