--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,21 +5,28 @@
   <version>0.1-SNAPSHOT</version>
   <name>JRep core classes</name>
   <dependencies>
+     <!-- does work for some reason
      <dependency>
        <groupId>org.gridkit.jrep</groupId>
        <artifactId>attach-api</artifactId>
        <version>0.1-SNAPSHOT</version>
        <scope>provided</scope>
      </dependency>
-     <!-- does work for some reason
+     -->
      <dependency>
        <groupId>sun.java</groupId>
-       <artifactId>attach-api</artifactId>
+       <artifactId>tools</artifactId>
        <version>1.6</version>
        <scope>system</scope>
-       <systemPath>${java.home}/lib/tools.jar</systemPath>
+       <systemPath>${java.home}/../lib/tools.jar</systemPath>
      </dependency>
-     -->
+     <dependency>
+       <groupId>sun.java</groupId>
+       <artifactId>jconsole</artifactId>
+       <version>1.6</version>
+       <scope>system</scope>
+       <systemPath>${java.home}/../lib/jconsole.jar</systemPath>
+     </dependency>
      <dependency>
         <groupId>org.codehaus.jackson</groupId>
         <artifactId>jackson-core-asl</artifactId>
