--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
      <module>jtop</module>
      <module>jtool</module>
   </modules>
+  <scm>
+    <connection>scm:git:https://github.com/aragozin/jvm-tools.git</connection>
+    <url>scm:git:https://github.com/aragozin/jvm-tools.git</url>
+    <developerConnection>scm:git:https://github.com/aragozin/jvm-tools.git</developerConnection>
+  </scm>
   <build>
     <pluginManagement>
       <plugins>
@@ -32,6 +37,11 @@
             <downloadSources>true</downloadSources>
             <downloadJavadocs>true</downloadJavadocs>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-release-plugin</artifactId>
+          <version>2.3.2</version>
         </plugin>
       </plugins>
     </pluginManagement>
