--- a/gcrep/pom.xml
+++ b/gcrep/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.gridkit.jrep</groupId>
+  <groupId>org.gridkit.jvmtool</groupId>
   <artifactId>gcrep</artifactId>
   <version>0.1-SNAPSHOT</version>
   <name>gcrep jar assembly</name>
   <dependencies>
     <dependency>
-      <groupId>org.gridkit.jrep</groupId>
+      <groupId>org.gridkit.jvmtool</groupId>
       <artifactId>core</artifactId>
       <version>0.1-SNAPSHOT</version>
     </dependency>
