--- a/jtool/pom.xml
+++ b/jtool/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.gridkit.jrep</groupId>
+  <groupId>org.gridkit.jvmtool</groupId>
   <artifactId>jtool</artifactId>
   <version>0.1-SNAPSHOT</version>
   <name>jtool jar assembly</name>
   <dependencies>
     <dependency>
-      <groupId>org.gridkit.jrep</groupId>
+      <groupId>org.gridkit.jvmtool</groupId>
       <artifactId>core</artifactId>
       <version>0.1-SNAPSHOT</version>
     </dependency>
@@ -34,13 +34,14 @@
             <configuration>
               <artifactSet>
                 <includes>
-                  <include>org.gridkit.jrep:*</include>
+                  <include>org.gridkit.jvmtool:*</include>
                   <include>org.codehaus.jackson:*</include>
+                  <include>org.apache.velocity:*</include>
                 </includes>
               </artifactSet>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>org.gridkit.util.monitoring.Tool</mainClass>
+                  <mainClass>org.gridkit.jvmtool.JTool</mainClass>
                 </transformer>
               </transformers>
             </configuration>
