--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>org.gridkit.jrep</groupId>
-  <artifactId>jrep-parent</artifactId>
+  <groupId>org.gridkit.jvmtool</groupId>
+  <artifactId>jvm-tools-parent</artifactId>
   <version>0.1-SNAPSHOT</version>
+  <description>JVM tools, parent project</description>
   <packaging>pom</packaging>
   <modules>
      <module>core</module>
