--- a/core/pom.xml
+++ b/core/pom.xml
@@ -1,16 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>org.gridkit.jrep</groupId>
+    <groupId>org.gridkit.jvmtool</groupId>
     <artifactId>core</artifactId>
     <version>0.1-SNAPSHOT</version>
-    <name>JRep core classes</name>
+    <name>${project.groupId}::${project.artifactId}</name>
+    <description>Core classes for Swiss Java Knife tool</description>
    
     <dependencies>
         <dependency>
             <groupId>org.gridkit.lab</groupId>
             <artifactId>jvm-attach-api</artifactId>
-            <version>1.0</version>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
@@ -22,6 +23,17 @@
         	<artifactId>jcommander</artifactId>
         	<version>1.30</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.6.6</version>
+        </dependency>
+        <dependency>
+        	<groupId>junit</groupId>
+        	<artifactId>junit</artifactId>
+        	<version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -31,15 +43,6 @@
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins </groupId>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>2.9</version>
-                <configuration>
-                    <buildOutputDirectory>eclipse-classes</buildOutputDirectory>
-                    <projectNameTemplate>jvmtools-${project.artifactId}</projectNameTemplate>
                 </configuration>
             </plugin>
         </plugins>
