--- a/sjk-plus/pom.xml
+++ b/sjk-plus/pom.xml
@@ -36,6 +36,11 @@
       <artifactId>mxdump</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.gridkit.jvmtool</groupId>
+      <artifactId>ygc-bench</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
   
   <build>
