--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
      <module>mxdump</module>
      <module>gcflow</module>
      <module>sjk</module>
+     <module>sjk-lite</module>
      <module>sjk-plus</module>
      <module>ygc-bench</module>
   </modules>
