--- a/pom.xml
+++ b/pom.xml
@@ -17,38 +17,61 @@
     limitations under the License.
 
 -->
-  
+
   <modelVersion>4.0.0</modelVersion>
+
+  <parent>
+    <groupId>org.gridkit.lab</groupId>
+    <artifactId>grid-lab-pom</artifactId>
+    <version>2</version>
+  </parent>
+
   <groupId>org.gridkit.jvmtool</groupId>
   <artifactId>jvmtool-umbrella-pom</artifactId>
   <version>0.1-SNAPSHOT</version>
   <name>${project.groupId}::${project.artifactId}</name>
   <description>JVM tools, parent project</description>
   <packaging>pom</packaging>
-  
+
   <modules>
-     <module>sjk-core</module>
-     <module>mxdump</module>
-     <module>gcflow</module>
-     <module>sjk</module>
-     <module>sjk-lite</module>
-     <module>sjk-plus</module>
-     <module>ygc-bench</module>
+    <module>sjk-core</module>
+    <module>mxdump</module>
+    <module>gcflow</module>
+    <module>sjk</module>
+    <module>sjk-lite</module>
+    <module>sjk-plus</module>
+    <module>ygc-bench</module>
   </modules>
-  
+
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <id>alexey.ragozin</id>
+      <name>Alexey Ragozin</name>
+      <email>alexey.ragozin@gmail.com</email>
+    </developer>
+  </developers>
+
   <scm>
     <connection>scm:git:https://github.com/aragozin/jvm-tools.git</connection>
-    <url>scm:git:https://github.com/aragozin/jvm-tools.git</url>
     <developerConnection>scm:git:https://github.com/aragozin/jvm-tools.git</developerConnection>
+    <url>https://github.com/aragozin/jvm-tools</url>
   </scm>
-  
+
   <build>
     <pluginManagement>
       <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>3.0</version>
           <configuration>
             <source>1.6</source>
             <target>1.6</target>
@@ -57,7 +80,50 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>2.3.2</version>
+          <version>2.4</version>
+          <configuration>
+            <autoVersionSubmodules>true</autoVersionSubmodules>
+            <pushChanges>true</pushChanges>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.14</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>2.9</version>
+          <executions>
+            <execution>
+              <id>attach-javadoc</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>2.2.1</version>
+          <executions>
+            <execution>
+              <id>attach-source</id>
+              <goals>
+                <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>2.6</version>
+          <configuration>
+            <encoding>UTF-8</encoding>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
