--- a/sjk-lite/pom.xml
+++ b/sjk-lite/pom.xml
@@ -21,7 +21,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.gridkit.jvmtool</groupId>
   <artifactId>sjk-lite</artifactId>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1</version>
   <name>${project.groupId}::${project.artifactId}</name>
   <description>SJK jar assembly</description>
 
