--- a/sjk-core/pom.xml
+++ b/sjk-core/pom.xml
@@ -20,9 +20,14 @@
 
     <modelVersion>4.0.0</modelVersion>
     
-    <groupId>org.gridkit.jvmtool</groupId>
+    <parent>
+      <groupId>org.gridkit.jvmtool</groupId>
+      <artifactId>jvmtool-umbrella-pom</artifactId>
+      <version>0.1-SNAPSHOT</version>
+      <relativePath>../pom.xml</relativePath>
+    </parent>
+
     <artifactId>sjk-core</artifactId>
-    <version>0.1-SNAPSHOT</version>
     <name>${project.groupId}::${project.artifactId}</name>
     <description>Core classes for Swiss Java Knife tool</description>
    
