--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
     <module>sjk</module>
     <module>sjk-lite</module>
     <module>sjk-plus</module>
+    <module>hprof-heap</module>
     <module>ygc-bench</module>
   </modules>
 
