Added HprofInstanceIterator for efficient full heap scans

--- a/hprof-heap/pom.xml
+++ b/hprof-heap/pom.xml
@@ -32,5 +32,11 @@
     <description>HPROF heap dump parser</description>
 
     <dependencies>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.10</version>
+      </dependency>
     </dependencies>
+
 </project>
