--- a/hprof-heap/pom.xml
+++ b/hprof-heap/pom.xml
@@ -18,25 +18,38 @@
 
 -->
 
-    <modelVersion>4.0.0</modelVersion>
+  <modelVersion>4.0.0</modelVersion>
 
-    <parent>
-      <groupId>org.gridkit.jvmtool</groupId>
-      <artifactId>jvmtool-umbrella-pom</artifactId>
-      <version>0.3-SNAPSHOT</version>
-      <relativePath>../pom.xml</relativePath>
-    </parent>
+  <parent>
+    <groupId>org.gridkit.jvmtool</groupId>
+    <artifactId>jvmtool-umbrella-pom</artifactId>
+    <version>0.3-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
+  </parent>
 
-    <artifactId>hprof-heap</artifactId>
-    <name>${project.groupId}::${project.artifactId}</name>
-    <description>HPROF heap dump parser</description>
+  <artifactId>hprof-heap</artifactId>
+  <name>${project.groupId}::${project.artifactId}</name>
+  <description>HPROF heap dump parser</description>
 
-    <dependencies>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.10</version>
-      </dependency>
-    </dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.10</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>1.6.0</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.gridkit.lab</groupId>
+      <artifactId>jvm-attach-api</artifactId>
+      <version>1.2-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
 
 </project>
