--- a/hprof-heap/pom.xml
+++ b/hprof-heap/pom.xml
@@ -47,7 +47,7 @@
     <dependency>
       <groupId>org.gridkit.lab</groupId>
       <artifactId>jvm-attach-api</artifactId>
-      <version>1.2-SNAPSHOT</version>
+      <version>1.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
