--- a/sjk-lite/pom.xml
+++ b/sjk-lite/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.gridkit.jvmtool</groupId>
     <artifactId>jvmtool-umbrella-pom</artifactId>
-    <version>0.3.2</version>
+    <version>0.3.3-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
