New StackFrame class, work started on V2 encoder

--- a/sjk-core/pom.xml
+++ b/sjk-core/pom.xml
@@ -48,7 +48,14 @@
             <version>4.10</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.carrotsearch</groupId>
+            <artifactId>junit-benchmarks</artifactId>
+            <version>0.7.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
