--- a/sjk-core/pom.xml
+++ b/sjk-core/pom.xml
@@ -23,7 +23,7 @@
     <parent>
       <groupId>org.gridkit.jvmtool</groupId>
       <artifactId>jvmtool-umbrella-pom</artifactId>
-      <version>0.3.4</version>
+      <version>0.3.5-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
     </parent>
 
