--- a/pom.xml
+++ b/pom.xml
@@ -34,12 +34,12 @@
   <packaging>pom</packaging>
 
   <modules>
+    <module>sjk-cli</module>
     <module>sjk-stacktrace</module>
     <module>sjk-core</module>
     <module>mxdump</module>
     <module>gcflow</module>
     <module>sjk</module>
-    <module>sjk-lite</module>
     <module>sjk-plus</module>
     <module>hprof-heap</module>
     <module>ygc-bench</module>
