Compressed heap dump support

--- a/hprof-heap/pom.xml
+++ b/hprof-heap/pom.xml
@@ -33,6 +33,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.gridkit.gzrand</groupId>
+      <artifactId>gzrand</artifactId>
+      <version>0.1</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
