--- a/hprof-heap/pom.xml
+++ b/hprof-heap/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.gridkit.jvmtool</groupId>
     <artifactId>jvmtool-umbrella-pom</artifactId>
-    <version>0.4.0</version>
+    <version>0.4.1-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
