--- a/sjk-plus/pom.xml
+++ b/sjk-plus/pom.xml
@@ -84,7 +84,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <configuration>
-          <skip>true</skip>
+          <skip>false</skip>
         </configuration>
       </plugin>
     </plugins>
