NetBeans Profiler Snapshot support

--- a/sjk/pom.xml
+++ b/sjk/pom.xml
@@ -68,6 +68,7 @@
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>org.gridkit.jvmtool.SJK</mainClass>
                 </transformer>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
               </transformers>
             </configuration>
           </execution>
