--- a/sjk/pom.xml
+++ b/sjk/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.gridkit.jvmtool</groupId>
     <artifactId>jvmtool-umbrella-pom</artifactId>
-    <version>0.7-SNAPSHOT</version>
+    <version>0.7</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -68,7 +68,7 @@
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <mainClass>org.gridkit.jvmtool.SJK</mainClass>
                 </transformer>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
               </transformers>
             </configuration>
           </execution>
