--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,63 @@
     <tag>HEAD</tag>
   </scm>
 
+  <dependencyManagement>
+    <dependencies>
+
+      <!-- Local modules -->
+      <dependency>
+        <groupId>org.gridkit.jvmtool</groupId>
+        <artifactId>sjk-cli</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.gridkit.jvmtool</groupId>
+        <artifactId>sjk-stacktrace</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.gridkit.jvmtool</groupId>
+        <artifactId>sjk-hflame</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <!-- Perfkit modules -->
+      <dependency>
+        <groupId>org.gridkit.jvmtool</groupId>
+        <artifactId>sjk-jfr</artifactId>
+        <version>0.3</version>
+      </dependency>
+      <dependency>
+        <groupId>org.gridkit.jvmtool</groupId>
+        <artifactId>sjk-nps</artifactId>
+        <version>0.3</version>
+      </dependency>
+      <dependency>
+        <groupId>org.gridkit.lab</groupId>
+        <artifactId>jvm-attach-api</artifactId>
+        <version>1.4-SNAPSHOT</version>
+      </dependency>
+
+      <!-- 3rd party modules -->
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.10</version>
+      </dependency>
+      <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>1.6.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.carrotsearch</groupId>
+        <artifactId>junit-benchmarks</artifactId>
+        <version>0.7.2</version>
+      </dependency>
+
+    </dependencies>
+  </dependencyManagement>
+
   <build>
     <pluginManagement>
       <plugins>
