--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
     <module>sjk-hflame</module>
     <module>sjk-win32</module>
     <module>sjk-core</module>
+    <module>sjk-json</module>
     <module>mxdump</module>
     <module>gcflow</module>
     <module>sjk</module>
@@ -97,6 +98,11 @@
       <dependency>
         <groupId>org.gridkit.jvmtool</groupId>
         <artifactId>mxdump</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.gridkit.jvmtool</groupId>
+        <artifactId>sjk-json</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
