--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
   <name>${project.groupId}::${project.artifactId}</name>
   <description>JVM tools, parent project</description>
   <packaging>pom</packaging>
-
+  
   <modules>
     <module>sjk-cli</module>
     <module>sjk-stacktrace</module>
@@ -47,7 +47,7 @@
     <module>hprof-heap</module>
     <module>ygc-bench</module>
   </modules>
-
+   
   <licenses>
     <license>
       <name>The Apache Software License, Version 2.0</name>
@@ -113,19 +113,24 @@
 
       <!-- Perfkit modules -->
       <dependency>
-        <groupId>org.gridkit.jvmtool</groupId>
+        <groupId>org.perfkit.sjk.parsers</groupId>
         <artifactId>sjk-jfr5</artifactId>
-        <version>0.4</version>
+        <version>0.5</version>
       </dependency>
       <dependency>
-        <groupId>org.gridkit.jvmtool</groupId>
+        <groupId>org.perfkit.sjk.parsers</groupId>
         <artifactId>sjk-jfr6</artifactId>
-        <version>0.4</version>
+        <version>0.6</version>
       </dependency>
       <dependency>
-        <groupId>org.gridkit.jvmtool</groupId>
+        <groupId>org.perfkit.sjk.parsers</groupId>
         <artifactId>sjk-nps</artifactId>
-        <version>0.4</version>
+        <version>0.5</version>
+      </dependency>
+      <dependency>
+        <groupId>org.perfkit.sjk.parsers</groupId>
+        <artifactId>sjk-jfr-standalone</artifactId>
+        <version>0.6</version>
       </dependency>
       <dependency>
         <groupId>org.gridkit.lab</groupId>
