--- a/sjk-plus/pom.xml
+++ b/sjk-plus/pom.xml
@@ -70,7 +70,12 @@
               </artifactSet>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>org.gridkit.jvmtool.SJK</mainClass>
+                  <manifestEntries>
+                    <Main-Class>org.gridkit.jvmtool.SJK</Main-Class>
+                    <Premain-Class>org.gridkit.jvmtool.agent.SjkAgent</Premain-Class>
+                    <Agent-Class>org.gridkit.jvmtool.agent.SjkAgent</Agent-Class>
+                    <Can-Redefine-Classes>false</Can-Redefine-Classes>
+                  </manifestEntries>
                 </transformer>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
               </transformers>
